# python-portfolio

./: .gitattributes  README.md  main.py  pyproject.toml
01-desktop-gui-apps/csv-schema-cleaner/: .gitignore  main.py  requirement.txt
01-desktop-gui-apps/csv-schema-cleaner/app/: database.py  metrics.py  ui.py
01-desktop-gui-apps/system-metric-monitor/: .gitignore  pulse_monitor.py  pulse_telemetry.db  requirement.txt
01-desktop-gui-apps/system-metric-monitor/app/: database.py  metrics.py  ui.py
02-data-pipelines/predictive-maintenance-pipeline/: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
02-data-pipelines/predictive-maintenance-pipeline/app/core/: data_processor.py  model.py
02-data-pipelines/predictive-maintenance-pipeline/app/gui/: interface.py
02-data-pipelines/predictive-maintenance-pipeline/app/utils/: logger.py
02-data-pipelines/predictive-maintenance-pipeline/tests/: test_pipeline.py
02-data-pipelines/price-tracker/: ,gitignore  README.md  main.py  requirement.txt
02-data-pipelines/price-tracker/app/: processor.py  trackers.py  visualizer.py
02-data-pipelines/price-tracker/data/: price_history.csv
03-backend-automation/file-organizer-daemon/: .gitignore  README.md  main.py  requirement.tx  setup.py
03-backend-automation/file-organizer-daemon/tests/: test_daemon.py
03-backend-automation/local-doc-search-api/: .gitignore  README.md  requirements.txt  setup.py
03-backend-automation/local-doc-search-api/app/: __init__.py  main.py
03-backend-automation/local-doc-search-api/tests/: test_engine.py
(+8 files in other folders)
