[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive_maintenance"
version = "0.1.0"
description = "An end-to-end industrial sensor predictive maintenance pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.2"
]
